--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,9 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity">
+    android:orientation="vertical"
+    android:background="#00BCD4"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="70dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="UsersPoll"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:textColor="#fff"/>
+            <EditText
+                android:id="@+id/log_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:hint="Enter email"
+                android:inputType="textEmailAddress"
+                android:textSize="25sp"
+                android:textColor="#000000"
+                />
+            <EditText
+                android:id="@+id/log_pass"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:hint="Enter password"
+                android:inputType="textPassword"
+                android:textSize="25sp"
+                android:textColor="#000000"/>
+            <Button
+                android:id="@+id/log_in_btn"
+                android:onClick="logInFunction"
+                android:layout_marginTop="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="Log in"
+                android:textColor="#fff"
+                android:background="#0097A7"
+                android:textSize="22sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Not an user, Sign up below!"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="#fff"/>
+            <Button
+                android:id="@+id/sign_btn"
+                android:onClick="toSignUpActivity"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="Sign in"
+                android:textColor="#fff"
+                android:background="#0097A7"
+                android:textSize="22sp"/>
 
-</android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+
+</android.support.v7.widget.LinearLayoutCompat>
