--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,28 +3,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="540dp">
 
-        </android.support.v7.widget.RecyclerView>
         <TextView
             android:id="@+id/post_a_poll_text_view"
-            android:background="#0097A7"
+            android:background="#1E88E5"
             android:onClick="toPollActivity"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:textColor="#fff"
             android:text="Post a poll"
             android:textSize="30sp"
             android:gravity="center"
             android:layout_gravity="center_vertical"/>
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/poll_list_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
+
 
 
 </android.support.v7.widget.LinearLayoutCompat>
