--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.LinearLayoutCompat android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#00BCD4"
+    android:background="#EEEEEE"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,8 +10,8 @@
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <EditText
@@ -31,15 +31,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginTop="10dp"
-                android:background="#80DEEA"
+                android:background="#fff"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="#0097A7"
+                    android:background="#81D4FA"
                     android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/poll_image_view"
@@ -52,6 +52,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text=" Poll"
+                        android:textColor="#fff"
                         android:textSize="30sp"/>
                 </LinearLayout>
                 <EditText
@@ -90,10 +91,11 @@
                 android:id="@+id/post_poll_button"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textColor="#fff"
                 android:onClick="toMainActivity"
                 android:gravity="center"
-                android:layout_marginTop="120dp"
-                android:background="#0097A7"
+                android:layout_marginTop="100dp"
+                android:background="#81D4FA"
                 android:text="Post poll"
                 android:textSize="25sp"/>
         </LinearLayout>
