--- a/app/src/main/res/layout/activity_poll_info.xml
+++ b/app/src/main/res/layout/activity_poll_info.xml
@@ -3,175 +3,210 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:background="#EEEEEE"
         android:layout_marginTop="5dp"
+        android:background="#EEEEEE"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#81D4FA"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/poll_info_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:text="Poll Name"
-                android:textSize="30sp"
                 android:textColor="#000000"
-                android:textStyle="bold"/>
+                android:textSize="30sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginStart="15dp"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/poll"/>
+                android:src="@drawable/poll" />
+
             <TextView
                 android:id="@+id/poll_info_question"
                 android:layout_width="300dp"
-                android:layout_marginStart="15dp"
                 android:layout_height="match_parent"
-                android:textColor="#000000"
+                android:layout_marginStart="15dp"
                 android:text="Poll Question"
-                android:textStyle="normal"
-                android:textSize="25sp"/>
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:textStyle="normal" />
         </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_height="2dp"
-            android:background="#78909C"/>
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:background="#78909C" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginStart="15dp"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="3dp"
-                android:textColor="#1565C0"
-                android:layout_height="match_parent"
                 android:text="Select one option below"
-                android:textSize="25sp"/>
+                android:textColor="#1565C0"
+                android:textSize="25sp" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/poll_info_op1"
                     android:layout_width="250dp"
                     android:layout_height="50dp"
-                    android:textColor="#2196F3"
-                    android:text="Option one"
                     android:clickable="true"
                     android:onClick="optionOneClicked"
-                    android:textSize="20sp"/>
+                    android:text="Option one"
+                    android:textColor="#2196F3"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/option_one_votes"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:text="0"
-                    android:textSize="25sp"/>
+                    android:textSize="25sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                android:id="@+id/poll_info_op2"
+                    android:id="@+id/poll_info_op2"
                     android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:textColor="#2196F3"
-                android:clickable="true"
-                android:onClick="optionTwoClicked"
-                android:text="Option two"
-                android:textSize="20sp"/>
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:onClick="optionTwoClicked"
+                    android:text="Option two"
+                    android:textColor="#2196F3"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/option_two_votes"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:text="0"
-                    android:textSize="25sp"/>
+                    android:textSize="25sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/poll_info_op3"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:textColor="#2196F3"
-                android:clickable="true"
-                android:onClick="optionThreeClicked"
-                android:text="Option three"
-                android:textSize="20dp"/>
+
+                <TextView
+                    android:id="@+id/poll_info_op3"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:onClick="optionThreeClicked"
+                    android:text="Option three"
+                    android:textColor="#2196F3"
+                    android:textSize="20dp" />
+
                 <TextView
                     android:id="@+id/option_three_votes"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:text="0"
-                    android:textSize="25sp"/>
+                    android:textSize="25sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/poll_info_op4"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:textColor="#2196F3"
-                android:clickable="true"
-                android:onClick="optionFourClicked"
-                android:text="Option four"
-                android:textSize="20sp"/>
+
+                <TextView
+                    android:id="@+id/poll_info_op4"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:onClick="optionFourClicked"
+                    android:text="Option four"
+                    android:textColor="#2196F3"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/option_four_votes"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:text="0"
-                    android:textSize="25sp"/>
+                    android:textSize="25sp" />
             </LinearLayout>
         </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_height="2dp"
-            android:background="#78909C"/>
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:background="#78909C" />
+
         <TextView
             android:id="@+id/total_votes_text_view"
-            android:layout_marginStart="15dp"
             android:layout_width="match_parent"
-            android:layout_marginTop="3dp"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="3dp"
+            android:baselineAligned="false"
+            android:text="Total votes: "
             android:textColor="#1565C0"
-            android:textSize="20sp"
-            android:text="Total votes: "/>
+            android:textSize="20sp" />
+
         <View
             android:layout_width="fill_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_height="2dp"
-            android:background="#78909C"/>
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:background="#78909C" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:onClick="forceCrash"
+            android:text="Force Crash!" />
+
 
     </LinearLayout>
 
