--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,30 +10,29 @@
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="530dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:text="Create account"
                 android:textSize="30sp"
                 android:gravity="center"/>
             <ImageView
                 android:onClick="selectProfilePicFunction"
                 android:id="@+id/profile_pic"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="@dimen/_130sdp"
+                android:layout_height="@dimen/_130sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_gravity="center"
                 android:background="@drawable/account"/>
             <EditText
                 android:id="@+id/sign_up_name"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="@dimen/_50sdp"
                 android:hint="Enter name"
                 android:textSize="25sp"
                 android:textColor="#000000"
@@ -41,8 +40,8 @@
             <EditText
                 android:id="@+id/sign_up_email"
                 android:layout_width="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_height="@dimen/_50sdp"
                 android:hint="Enter email"
                 android:textSize="25sp"
                 android:textColor="#000000"
@@ -50,8 +49,8 @@
             <EditText
                 android:id="@+id/sign_up_pass"
                 android:layout_width="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_height="@dimen/_50sdp"
                 android:hint="Enter password"
                 android:textSize="25sp"
                 android:textColor="#000000"
@@ -60,10 +59,10 @@
                 android:onClick="signUpFunction"
                 android:id="@+id/sign_btn"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="45dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:text="Sign in"
                 android:textColor="#fff"
                 android:background="#0097A7"
