--- a/app/src/main/res/layout/listofpoll.xml
+++ b/app/src/main/res/layout/listofpoll.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView android:id="@+id/poll_list_card_view"
     android:layout_width="match_parent"
     android:layout_height="185dp"
@@ -7,8 +6,7 @@
     android:layout_marginTop="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-            <LinearLayout
+    <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -51,11 +49,11 @@
                         android:textSize="20sp"
                         android:text="Username"/>
 
-                    <ImageView
+                    <TextView
+                        android:id="@+id/total_votes_count"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
-                        android:layout_marginStart="35dp"
-                        android:src="@drawable/vote" />
+                        android:layout_marginStart="35dp"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
